# qrca

./: Cargo.toml  README.MD
src/: lib.rs  main.rs  reader.rs  tests.rs  writer.rs
