[package]
name = "qrca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bitstream-io = "1.6.0"
clap = "4"
glob = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
[dev-dependencies]
rand = "0.8.5"
